--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,8 @@
 authors: [dewgs, Erouax, Coords]
-depend: [Core, ProtocolLib]
+depend: [ProtocolLib]
 main: club.mineman.antigamingchair.AntiGamingChair
 name: AntiGamingChair
 version: 1.6.4.2-b92036b9
+commands:
+     agc:
+     ping:
